--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "parcel-project-template",
   "version": "2.0.0",
   "description": "",
-  "homepage": "https://Dima-Davidenko.github.io/donut-Masters",
+  "homepage": "https://github.com/Dmytro1117/rrrrrrrrrrrrrrr",
   "scripts": {
-    "start": "parcel src/*.html",
-    "build": "parcel build src/*.html --public-url /donut-Masters/"
+    "start": "parcel src/index.html",
+    "build": "parcel build src/*.html --public-url /rrrrrrrrrrrrrrr/"
   },
   "repository": {
     "type": "git",
