--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "parcel-project-template",
   "version": "2.0.0",
   "description": "",
-  "homepage": "https://Dmytro1117/rrrrrrrrrrrrrrr",
+  "homepage": "https://Dmytro1117.github.io/rrrrrrrrrrrrrrr",
   "scripts": {
     "start": "parcel src/index.html",
     "build": "parcel build src/*.html --public-url /rrrrrrrrrrrrrrr/"
